# libft

./: .gitignore  CMakeLists.txt  Makefile  ft_bzero.c  ft_lstiter.c  ft_memchr.c  ft_strnstr.c  ft_substr.c  libft.h
cmake/: Docs.cmake  Sanitizer.cmake  Warnings.cmake
docs/: Doxyfile
docs/html/: absf_8c.html  absf_8c.js  annotated.html  annotated_dup.js  atohex_8c.html  atohex_8c.js  atohex_8c__incl.map  atohex_8c__incl.md5  classes.html  clear__queue_8c.html  clear__queue_8c.js  clear__queue_8c__incl.map  clear__queue_8c__incl.md5  clear__stack_8c.html  clear__stack_8c.js  clear__stack_8c__incl.map  clear__stack_8c__incl.md5  count__words_8c.html  count__words_8c.js  count__words_8c__incl.map  count__words_8c__incl.md5  dequeue_8c.html  dequeue_8c.js  dequeue_8c__incl.map  dequeue_8c__incl.md5  dir_000000_000003.html  dir_000001_000003.html  dir_000002_000003.html  dir_000004_000003.html  dir_000005_000003.html  dir_000006_000003.html  dir_000007_000003.html  dir_05f26453978d665f549dd32cf35777dc.html  dir_05f26453978d665f549dd32cf35777dc.js  dir_05f26453978d665f549dd32cf35777dc_dep.map  dir_05f26453978d665f549dd32cf35777dc_dep.md5  dir_5a05eb3f7b48eb56f0b5380eccffe18b.html  dir_5a05eb3f7b48eb56f0b5380eccffe18b.js  dir_5a05eb3f7b48eb56f0b5380eccffe18b_dep.map  dir_5a05eb3f7b48eb56f0b5380eccffe18b_dep.md5  (+367 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  (+26 more)
ft_printf/: CMakeLists.txt  parse_conversion.c  print_char_str.c  print_num.c
get_next_line/: CMakeLists.txt  get_next_line.c
hashtable/: CMakeLists.txt  hash_table_free.c  hash_table_has_key.c  hash_table_init.c  string_hash.c
include/: CMakeLists.txt  ft_printf.h  get_next_line.h  hashtable.h  libft.h  libft_addendum.h  mathematics.h  queue.h  stack.h
libft_addendum/: CMakeLists.txt  absf.c  atohex.c  count_words.c  error_exit.c  lst_del_node.c  lst_nth.c  safe_malloc.c  safe_malloc2.c  safe_write.c
libft_core/: CMakeLists.txt  ft_atoi.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstsize.c  ft_putendl_fd.c  ft_strjoin.c  ft_strlcpy.c  ft_strtrim.c
main/: CMakeLists.txt  main.c
mathematics/: abs_f.c  factorial.c
queue/: CMakeLists.txt  clear_queue.c  dequeue.c  dequeue_free.c  init_queue.c  queue_clear.c  queue_init.c  queue_peek.c  queue_peek_n.c
src/: CMakeLists.txt  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strrchr.c  ft_substr.c  ft_tolower.c
src/ft_printf/: ft_printf.c
src/hashtable/: hash_table_insert.c
src/libft_addendum/: CMakeLists.txt  free_tab.c  lst_del_node.c  lst_drop.c  lst_nth.c  maxf.c  sign.c  strip_nl.c
src/libft_core/: CMakeLists.txt  ft_atoi.c  ft_calloc.c  ft_lstdelone.c  ft_lstlast.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_strchr.c  ft_strlcat.c  ft_substr.c  ft_toupper.c
src/math/: mathematics.c
src/mathematics/: CMakeLists.txt  abs_i.c  factorial.c  sign_i.c
src/queue/: CMakeLists.txt  clear_queue.c  dequeue.c  dequeue_free.c  dequeue_nth.c  enqueue.c  init_queue.c  is_empty.c  queue_is_empty.c  queue_size.c
src/stack/: CMakeLists.txt  clear_stack.c  init_stack.c  peek_stack.c  pop_stack.c  push_stack.c  stack_init.c  stack_is_empty.c  stack_pop.c  stack_push.c
srcs/: ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c
stack/: init_stack.c  stack_clear.c  stack_is_empty.c  stack_peek.c  stack_size.c
tests/: CMakeLists.txt  factorial_test.cpp  main.c  main.cpp
tests/libft_addendum/: absf_test.cpp  lst_nth_test.cpp
tests/libft_core/: ft_atoi_test.cpp
tests/mathematics/: abs_f_test.cpp  abs_i_test.cpp  factorial_test.cpp
tests/queue/: queue_tests.cpp
tests/stack/: stack_tests.cpp
tests_backup/: CMakeLists.txt  main.cpp
